package com.ranferi.ssrsi.model;

public class Types {
    public static final String[] strCatsNames = {
            "¿Qué tipo de lugar?",
            "Bar","Restaurante",
            "Restaurante de curry japonés",
            "Restaurante italiano",
            "Club nocturno",
            "Club de rock",
            "Local de sándwiches",
            "Restaurante kurdo",
            "Restaurante yucateco",
            "Hamburgueseria",
            "Pizzeria"
    };

    public static final String[] strCatsCodes = {
            "¿Qué tipo de lugar?",
            "Bar",
            "Restaurante",
            "Restaurante_de_curry_japones",
            "Restaurante_italiano",
            "Club_nocturno",
            "Club_de_rock",
            "Local_de_sandwiches",
            "Restaurante_kurdo",
            "Restaurante_yucateco",
            "Hamburgueseria",
            "Pizzeria"
    };
}
